[package]
edition = "2021"
name = "livemoe_tools"
version = "0.0.0"


[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.10.2", default-features = false, features = ["napi4"] }
napi-derive = "2.9.0"
lazy_static = "1.4.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.43.0"
features = [
    "Win32_Foundation", 
    "Win32_System_LibraryLoader", 
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Memory",
    "Win32_UI_Controls",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm"
]

[target.'cfg(windows)'.dependencies]
wchar = "0.11"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
